# Python_Langchain_GeneralAI

./: README.md  main.py  pyproject.toml  pyrightconfig.json
.cursor/rules/: langchain_class.mdc  my-rules.mdc
Lession_five/: lession_5_1.ipynb  lession_5_3.py  lession_5_4.py
Lession_four/: agents.md  lession_4_1.ipynb  lession_4_2.py
Lession_one/: lesson1_2.ipynb
Lession_seven/: lession_7_1.py  lession_7_2.py  lession_7_3.py
Lession_seven/db/chroma_db_v3/: chroma.sqlite3
Lession_seven/db/chroma_db_with_metadata_chinese_nb/: chroma.sqlite3
Lession_six/: lession_6_1.ipynb  lession_6_1.py  lession_6_2.ipynb  lession_6_3.ipynb
Lession_three/: lesson3_1.ipynb  lesson3_1.py  lesson3_2.ipynb
Lession_two/: lesson2_1.ipynb  lesson2_2.ipynb  條件判斷式.md
modelFun/: printModel.py
