[project]
name = "python-langchain-generalai"
version = "0.1.0"
description = "General AI playground with LangChain"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "gradio",
    "ipywidgets",
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-ollama",
    "langchainhub",
    "ollama",
    "python-dotenv",
    "requests>=2.32.5",
    "charset-normalizer>=3.4.3",
    "chromadb>=1.2.1",
    "colorama>=0.4.6",
    "sentence-transformers>=5.1.2",
    "langchain-chroma>=0.2.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
